# panda

./: .dockerignore  .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  Dockerfile  MAINTAINERS  Makefile  Makefile.dynslice2  Makefile.objs  Makefile.target  Notes.txt  PANDA.changelog  README  README.md  Vagrantfile  build.sh  build_papi.sh  build_script.sh  buildsmall.sh  config-devices.mak  config.replay  configure  cpu-all.h  cpu-defs.h  cpu-exec.c  cpu-target.c  cpus-common.c  cpus.c  cpus.h  cputlb.c  disas.c  dma-helpers.c  dump.c  dyngen-exec.h  exec-all.h  exec.c  expect_debug_script.sh  firmwire-configure-min.sh  (+50 more)
audio/: audio.c
backends/: Makefile.objs  vhost-user.c
block/: Makefile.objs  gluster.c  privmem.c  qcow.c  qcow2.c  sheepdog.c  vdi.c  vhdx-endian.c  vhdx-log.c  vhdx.c  vpc.c  vvfat.c
bsd-user/: elfload.c
chardev/: Makefile.objs  char-panda.c  char-panda.h  char-stdio.c  char.c
crypto/: block-luks.c
debian/: .gitignore  changelog  control  copyright  rules
disas/: arm-a64.cc  i386.c
docs/: Android.md  LINE_Censorship.md  PANDA.md  Plugins.md  README.md  Starcraft.md  UAF.md  compile.md  compile.txt  dynslice.md  hd_taint.txt  manual.md  panda_ssltut.md  pandalog.md  ppp.md  record_replay.md  stuw.md  syscalls.md  syscalls2.md  tainted_instructions.md
fpu/: softfloat.c
gdb-xml/: arm-banked.xml
hw/: Makefile.objs  pc.c
include/: glib-compat.h
linux-user/: elfload.c  qemu.h  signal.c  syscall.c
migration/: colo-comm.c  colo.c  exec.c  fd.c  migration.c  qemu-file.c  ram.c  rdma.c  savevm.c  savevm.h  socket.c  vmstate.c
monitor/: hmp-cmds.c
nbd/: client.c  server.c
net/: eth.c  slirp.c  tap-aix.c  tap-bsd.c  tap-linux.c  tap-solaris.c  tap.c  tap_int.h  vhost-user.c
panda/: Dockerfile  Makefile.panda  Makefile.panda.target  callback_support.c  callbacks.c  common.cpp
panda/guest_plugins/tcp_servers/: Cargo.toml
panda/guest_plugins/tcp_servers/src/: allow_cancel.rs  main.rs
panda/plugins/asidstory_rs/: Cargo.toml
panda/plugins/asidstory_rs/src/: lib.rs
panda/plugins/cosi/: Cargo.toml  README.md  cbindgen.toml  cosi.h  cosi_test.py  generate_header  jdcoder.py
panda/plugins/cosi/examples/: example.py
panda/plugins/cosi/src/: downloader.rs  kaslr.rs  lib.rs  structs.rs
panda/plugins/cosi/src/ffi/: core.rs  files.rs  mod.rs  task.rs
panda/plugins/cosi/volatility_profile/: Cargo.toml
panda/plugins/cosi/volatility_profile/src/: lib.rs
panda/plugins/cosi_strace/: Cargo.toml  README.md
panda/plugins/cosi_strace/src/: lib.rs  osi_arg_type.rs
panda/plugins/dynamic_symbols2/: Cargo.toml
panda/plugins/dynamic_symbols2/src/: api.rs  dynamic_symbols2.rs  symbol_manager.rs
panda/plugins/fault_hooks/: Cargo.toml  Makefile  README.md  fault_hooks.h  tester.py
panda/plugins/fault_hooks/src/: api.rs  exceptions.rs  fault_hook_manager.rs  fault_hooks.rs
panda/plugins/frida/: Cargo.toml  README.md
panda/plugins/frida/src/: lib.rs
panda/plugins/gdb/: .gitignore  Cargo.toml  README.md  output_replay.py  record_example_replay.py  run.sh  run_noreplay.sh  run_noreplay_arm.sh  run_noreplay_i386.sh  run_noreplay_mips.sh  run_noreplay_ppc.sh
panda/plugins/gdb/src/: args.rs  connection.rs  lib.rs  memory_map.rs  panda_target.rs  target_state.rs  x86_64-features.xml
panda/plugins/gdb/src/monitor_commands/: mod.rs  parser.rs  proc_info.rs  proc_list.rs  thread_info.rs
panda/plugins/guest_plugin_manager/: Cargo.toml  Makefile  README.md  guest_plugin_manager_ppp.h
panda/plugins/guest_plugin_manager/src/: guest_plugin_manager.rs  hyp_regs.rs
panda/plugins/guest_plugin_manager/src/interface/: api.rs  channels.rs  daemon_manager.rs  guest_daemon_manager.rs  hci.rs  mod.rs  plugin.rs  plugin_manager.rs
panda/plugins/guest_shell/: Cargo.toml  guest_shell_pty.sh
panda/plugins/guest_shell/rusty_shell/: Cargo.toml
panda/plugins/guest_shell/rusty_shell/src/: hypercall.rs  main.rs
panda/plugins/guest_shell/src/: lib.rs
panda/plugins/hooks3/: Cargo.toml  Makefile  README.md  hooks3.h  tester.py
panda/plugins/hooks3/src/: api.rs  hook_manager.rs  hooks3.rs
panda/plugins/hyperfuse/: Cargo.toml
panda/plugins/hyperfuse/src/: lib.rs  types.rs
panda/plugins/linjector/: .gitignore  Cargo.toml  README.md  linjector_ppp.h
panda/plugins/linjector/src/: args.rs  lib.rs  regs.rs  syscalls.rs
panda/plugins/linjector/src/injectables/: Makefile  injector.c  tiny_mmap.c
panda/plugins/linjector/src/injectables/include/: hypercall.h  hypercall_constants.h  syscall_x86.h
panda/plugins/linjector/src/syscalls/: aarch64.rs  arm.rs  i386.rs  mips.rs  mips64.rs  x86_64.rs
panda/plugins/osi2/: Cargo.toml  README.md  osi2.h  osi2_test.py
panda/plugins/osi2/src/: ffi.rs  json_types.rs  kaslr.rs  lib.rs  osi2.rs  structs.rs
panda/plugins/osi2/src/ffi/: core.rs  mod.rs  task.rs
panda/plugins/osi2/volatility_profile/src/: lib.rs
panda/plugins/print_tcp_servers/: Cargo.toml  try_it.py
panda/plugins/print_tcp_servers/src/: display.rs  forward_socket.rs  lib.rs  send_ext.rs  socket_list.rs  tcp.csv
panda/plugins/print_tcp_servers/tcp_shared_types/: Cargo.toml
panda/plugins/rust_skeleton/: .gitignore  Cargo.toml  Makefile  README.md
panda/plugins/rust_skeleton/src/: lib.rs
panda/plugins/snake_hook/: Cargo.toml  Makefile  README.md
panda/plugins/snake_hook/src/: lib.rs  loader.rs  panda_plugin.rs  plugin_path.rs  py_unix_socket.rs
panda/plugins/sysinject_rs/: Cargo.toml  README.md
panda/plugins/sysinject_rs/src/: lib.rs
pc-bios/: panda.rsrc
plugins/: api.c  core.c  loader.c  plugin.h  qemu-plugins.symbols
qapi/: qmp-dispatch.c  string-input-visitor.c
qemu/: Makefile  Makefile.target  NOTES.txt  Notes.txt  arch_init.c  bswap.h  build.sh  cbuffer.c  cbuffer.d  cbuffer.h  charpipe.c  charpipe.h  config.replay  configure  console.c  console.h  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  cpus.c  debug.sh  device_memory.json  disas.c  exec-all.h  exec.c  extra_plugins_panda.mak  foobar.cpp  gdbstub.c  gdbstub.h  gen-icount.h  hmp-commands.hx  hmp.h  host-utils.c  host-utils.h  iohandler.c  (+42 more)
(+4094 files in other folders)
