[package]
name = "dynamic_symbols2"
version = "0.1.0"
authors = ["Luke Craig <Luke.Craig@ll.mit.edu>", "Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/dynamic_symbols2.rs"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.116"
once_cell = "1.9.0"
panda-re = { version = "0.14.0", default-features = false }
paste = "1.0.6"
setjmp = "0.1.4"

[target.release]
debug='true'

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
mips64 = ["panda-re/mips64"]
aarch64 = ["panda-re/aarch64"]
