[package]
name = "fault_hooks"
version = "0.1.0"
authors = ["Luke Craig <Luke.Craig@ll.mit.edu>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/fault_hooks.rs"

[dependencies]
lazy_static = "1.4.0"
panda-re =  {version = "0.32.0", default-features = false }
ord-by-set = "1.0.3"

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
mips64 = ["panda-re/mips64"]
aarch64 = ["panda-re/aarch64"]
