[package]
name = "rust_skeleton"
version = "0.1.0"
authors = ["Luke Craig <Luke.Craig@ll.mit.edu>", "Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "./src/guest_plugin_manager.rs"

[dependencies]
panda-re = { version = "0.13.0", default-features = false }
crossbeam-queue = "0.3.2"
parking_lot = "0.11.2"
lazy_static = "1.4.0"
once_cell = "1.8.0"

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
aarch64 = ["panda-re/aarch64"]
