[package]
name = "hyperfuse"
version = "0.1.0"
authors = ["Luke Craig <Luke.Craig@ll.mit.edu>", "Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-re = { version = "0.25", default-features = false }
fuser = { version = "0.9", features = ["serializable"] }
libc = "0.2.98"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1"
parking_lot = "0.11"
crossbeam-queue = "0.3"

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
aarch64 = ["panda-re/aarch64"]
