[package]
name = "print_tcp_servers"
version = "0.1.0"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-re = { version = "0.34", default-features = false }
bincode = "1"
serde = { version = "1", features = ["derive"] }
tabled = { version = "0.6", features = ["color"] }
once_cell = "1"
owo-colors = "3"
dashmap = "5"

tcp_shared_types = { path = "./tcp_shared_types" }

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
aarch64 = ["panda-re/aarch64"]
