[package]
name = "snake_hook"
version = "0.1.0"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-re = { version = "0.7", default-features = false }
inline-python = { version = "0.7.0" }
libc = "0.2.98"
once_cell = "1"

pyo3 = { version = "0.14", features = ["macros"] }
lazy_static = "1.4.0"

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
aarch64 = ["panda-re/aarch64"]
