[package]
name = "sysinject_rs"
version = "0.1.0"
authors = ["Zak Estrada <Zachary.Estrada@ll.mit.edu", "Luke Craig <Luke.Craig@ll.mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-re = { version = "0.42.1", default-features = false }
#panda-re = { path = "/out/panda-rs/panda-rs", default-features = false }

[features]
#default = ["mips"]
#default = ["arm"]
default = ["i386"]

#x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
#ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
#mipsel = ["panda-re/mipsel"]
#mips64 = ["panda-re/mips64"]
#aarch64 = ["panda-re/aarch64"]
